--- a/board-back/src/main/resources/application.properties
+++ b/board-back/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=110MB
+
+secret-key=SecretKey;
