--- a/board-front/package.json
+++ b/board-front/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "cra-template-typescript": "1.3.0",
     "react": "^19.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^5.1.0"
+    "web-vitals": "^5.1.0",
+    "zustand": "^5.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
