--- a/board-front/package.json
+++ b/board-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.12.2",
     "cra-template-typescript": "1.3.0",
     "react": "^19.2.0",
     "react-cookie": "^8.0.1",
