--- a/board-front/package.json
+++ b/board-front/package.json
@@ -7,6 +7,7 @@
     "cra-template-typescript": "1.3.0",
     "react": "^19.2.0",
     "react-cookie": "^8.0.1",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
