--- a/board-back/src/main/resources/application.properties
+++ b/board-back/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=110MB
 
 secret-key=SecretKey
+file.path=C:/Users/user/Documents/filePath/
+file.url=http://localhost:4000/file/
