--- a/board-front/package.json
+++ b/board-front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cra-template-typescript": "1.3.0",
+    "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-cookie": "^8.0.1",
     "react-daum-postcode": "^3.2.0",
