--- a/board-front/package.json
+++ b/board-front/package.json
@@ -10,6 +10,7 @@
     "react-cookie": "^8.0.1",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.5",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.1.0",
@@ -45,6 +46,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
+    "@types/react-easy-crop": "^1.16.0",
     "@types/react-router-dom": "^5.3.3"
   }
 }
