--- a/board-front/package.json
+++ b/board-front/package.json
@@ -11,6 +11,7 @@
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.2.0",
     "react-easy-crop": "^5.5.5",
+    "react-image-crop": "^11.0.10",
     "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^5.1.0",
